--- a/src/_includes/components/layout.css
+++ b/src/_includes/components/layout.css
@@ -4,9 +4,6 @@
 	margin-left: 0;
 	margin-right: 0;
 }
-.fl .lo-maxgrow {
-	flex-grow: 999;
-}
 
 /* WebC migration: This has moved in to flex-luthor.webc */
 .lo-c-center {
